data/derived/fa15/progs/unify/prog0240.ml.out
Characters 178-185:
  | Sine(a)             -> Printf.sprintf "%expr" "(pi*" a ")"
                                          ^^^^^^^
Error: This expression has type
         ('a -> 'b -> 'c, unit, string, string, string, 'a -> 'b -> 'c)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b -> 'c, unit, string, string, string, string)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b -> 'c is not compatible with type string 
